# imgui_file_explorer

./: .gitignore  CMakeLists.txt  README.md
ImGuiFileExplorer/: ImGuiFileExplorer.hpp
example/: main.cpp
